Change box sizing to vh and vw units to attempt to quell overflow issues.

--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -5,7 +5,7 @@
 }
 
 .AppContainer {
-  height: 94%;
-  width: 100%;
+  height: 94vh;
+  width: 100vw;
   display: flex;
 }
