--- a/src/Components/DetailView/DetailView.css
+++ b/src/Components/DetailView/DetailView.css
@@ -1,5 +1,5 @@
 .DetailView {
   width: 80%;
-  height: 100%;
+  height: 94vh;
   background: rgb(240, 245, 250);
 }
